Mod/sources/tab-bar.css
/* ... */
#tabs-tabbar-container .tab.marked {
  background-color: transparent !important;
  border: 1px solid var(--GXborderColor) !important;
}
#tabs-tabbar-container .tab.marked:not(.tab-group) {
  background-image: linear-gradient(135deg, var(--GXborderColor) 4.5px, transparent 0px);
}
#tabs-tabbar-container .tab-indicator.marked.active.tab-indicator.marked:after {
  content: unset;
}

/*  */
.tab-group .tab-header > span.favicon {
  /* to get to 15px tall */
  transform: scale(0.833) !important;
}
.tab-group .tab-header > .title {
  margin-left: -3px;
  margin-right: 0;
  margin-top: 0.833px;
  font-size: 11px;
}
/* Give more room for compact tab stack indicators by scaling down tab header */
.tab-group .tab-header > .close {
  transform: scale(0.833) !important;
}
#browser:not(.alt-tabs) #tabs-container .tab.tab-group:not(.tab-mini) .close {
  margin-right: 3px;
}
#tabs-container .tab-position .tab.tab-group .tab-header {
  padding-top: 7px;
  padding-bottom: 5px;
  padding-left: 3px;
}

/* Hide backdrop behind active tab's favicon */
.transparent-tabbar .tab-position .tab.active .tab-header .favicon:not(.svg),
.theme-dark .tab-position .tab.active .tab-header .favicon:not(.svg),
.acc-dark.color-behind-tabs-off .tab-position .tab.active .tab-header .favicon:not(.svg) {
  filter: unset;
}

/* Give all favicons a slight backdrop */
.tab-position .tab .tab-header .favicon:not(.svg) {
  filter: drop-shadow(0px 0px 1px var(--colorAccentBg));
}
#browser.color-behind-tabs-on .tab-position .tab .tab-header .favicon:not(.svg) {
  filter: drop-shadow(0px 0px 1px var(--colorBg));
}

/* Hide default borders above and below 2nd level tabs */
#tabs-subcontainer {
  box-shadow: unset !important;
}

/* Stylize tab popup tooltips */
#vivaldi-tooltip .tooltip .tooltip-item {
  background-color: var(--colorAccentBg);
  color: var(--colorAccentFg);
}
#vivaldi-tooltip .tooltip .tab-group .tooltip-item.last-active {
  background-color: var(--colorAccentBgDark);
}
#vivaldi-tooltip .tooltip .tab-group .tooltip-item:hover {
  background-color: var(--colorHighlightBgDark);
  color: var(--colorHighlightFg);
  fill: var(--colorHighlightFg);
}
/* Border under active tab preview */
/* .active.tooltip-item.active {
  border-bottom: 1px solid var(--GXborderColor);
} */
#vivaldi-tooltip .tooltip-item .tooltip-audio-button {
  background-color: transparent !important;
}

/* remove gap between tab popup tooltip and tab bar */
#browser.tabs-top > #vivaldi-tooltip .tooltip[style*="top: 3"] {
  top: 30px !important;
}
#browser.tabs-top > #vivaldi-tooltip .tooltip[style*="top: 4"] {
  top: 39px !important;
}
#browser.tabs-top > #vivaldi-tooltip .tooltip[style*="top: 6"] {
  top: 61px !important;
}
#browser.tabs-top > #vivaldi-tooltip .tooltip[style*="top: 7"] {
  top: 70px !important;
}

/* Stylize net tab button */
.newtab button svg > path {
  d: path("M26,11.818H14.214a.032.032,0,0,1-.032-.032V0H11.818V11.786a.032.032,0,0,1-.032.032H0v2.364H11.786a.032.032,0,0,1,.032.032V26h2.364V14.214a.032.032,0,0,1,.032-.032H26Z");
}
.toolbar-tabbar .button-toolbar.newtab button svg {
  height: 11px;
  width: 11px;
  color: var(--GXbuttonFill);
}
#tabs-container[style*="flex-grow: 0;"] .newtab button svg {
  color: var(--colorFg) !important;
}
.toolbar-tabbar .button-toolbar.newtab button {
  opacity: 1;
}
.toolbar-tabbar .button-toolbar.newtab button:hover {
  background-color: var(--colorHighlightBgAlpha);
}

/* Stylize tab audio playing icon */
.tab:not(.tab-group) .tab-audio,
#tabs-container .tab.pinned.audio-on .tab-audio {
  transform: scale(0.8) !important;
  left: 1px;
  bottom: 0;
  border-radius: 100%;
  background-color: rgba(200, 180, 180, 0.85) !important;
  color: var(--colorBg) !important;
  padding: unset;
  height: 16px;
  width: 16px;
}
/* prevent icon from shifting when active */
.tab:not(.tab-group).active .tab-audio,
#tabs-container .tab.active.pinned.audio-on .tab-audio {
  left: 0px;
  top: 5px !important;
}
/* keep favicon from disappearing while audio icon is shown */
.tab:not(.tab-group).audio-on .favicon,
.tab:not(.tab-group).audio-muted .favicon {
  transform: scale(1) !important;
}
/* give tab groups different style audio icon so it is still easy to click */
.tab.tab-group .tab-audio {
  transform: scale(0.833) !important;
  left: 19px;
  top: 7px !important;
}
.tab.active.tab-group .tab-audio {
  left: 18px;
  top: 6.5px !important;
}
.tab-group.audio-on .title,
.tab-group.audio-muted .title {
  margin-left: 8px;
}

/* Make the tab stack counter blend in with background when the stack is active */
.stack-counter {
  background-color: var(--GXbuttonFill) !important;
  color: var(--colorHighlightFg) !important;
}
.tab.active .stack-counter {
  background-color: var(--colorAccentBg) !important;
  color: var(--colorAccentFg) !important;
}
#browser.color-behind-tabs-on .tab.active .stack-counter {
  background-color: var(--colorBg) !important;
  color: var(--colorFg) !important;
}

/* For non-transparent tab bar, fade into transparent UI */
#browser:not(.transparent-tabbar).tabs-top #header {
  background-color: transparent;
}
#browser:not(.transparent-tabbar) #tabs-tabbar-container {
  background-color: transparent;
  background-image: linear-gradient(to top, var(--colorBgAlphaBlur), var(--colorBg));
}

/* Remove corner rounding from corners of tabs */
.tab-position > .tab.active {
  border-radius: unset !important;
  margin-bottom: 0;
}
.tabs-top .tab.active:not(.marked):not(.tab-mini):not(.tab-in-accordion):after,
.tabs-top .tab.active:not(.marked):not(.tab-mini):not(.tab-in-accordion):before,
.tabs-bottom .tab.active:not(.marked):not(.tab-mini):not(.tab-in-accordion):after,
.tabs-bottom .tab.active:not(.marked):not(.tab-mini):not(.tab-in-accordion):before {
  content: unset;
}

/* Remove corner rounding from top left to prevent interfering with cut */
#tabs-container .tab-position .tab {
  border-top-left-radius: unset !important;
}
/* ... */

